src/test/deca/context/invalid/test8_not.deca
// Description:
//    Programme testant  une mauvaise operation.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//	  test_context : erreur ligne 16 : Not operator 
//	  must be applied on a boolean expression
//
// Historique:
//    cree le 09/01/2020

{
	int a;
	!a;
}